--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -3,6 +3,71 @@ $very-dark-desaturated-blue: hsl(229, 23%, 23%);
 $dark-grayish-blue: hsl(227, 10%, 46%);
 $dark-gray: hsl(0, 0%, 59%);
 
+@mixin position {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.attribution {
+  font-size: 11px;
+  text-align: center;
+  color: hsl(0, 0%, 100%);
+
+  a {
+    color: hsl(0, 0%, 96%);
+  }
+}
+
+.avatar {
+  position: absolute;
+  top: 9rem;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 5px solid hsl(0, 0%, 100%);
+}
+
+.card {
+  width: 22rem;
+  height: 24rem;
+  border-radius: 0.75rem;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  text-align: center;
+}
+
+.cardUp {
+  width: 100%;
+  height: 9rem;
+  background: url("../public/bg-pattern-card.svg");
+}
+
+.cardMiddle {
+  width: 100%;
+  height: 9.5rem;
+  border-bottom: 1px solid hsl(0, 0%, 83%);
+  color: $very-dark-desaturated-blue;
+
+  p {
+    font-size: 0.85rem;
+    padding-top: 0.4rem;
+    color: $dark-gray;
+  }
+
+  span {
+    font-weight: 400;
+    color: $dark-gray;
+    padding-left: 0.2rem;
+  }
+}
+
+.cardDown {
+  flex-grow: 1;
+}
+
 .container {
   padding: 0 2rem;
   height: 100vh;
@@ -10,6 +75,26 @@ $dark-gray: hsl(0, 0%, 59%);
   flex-direction: column;
   justify-content: space-between;
   padding-bottom: 0.5rem;
+  background: url("../public/bg-pattern-top.svg");
+  background-repeat: no-repeat;
+  background-position: -100% 140%;
+  position: relative;
+}
+
+.container::after {
+  content: "";
+  @include position();
+  background: url("../public/bg-pattern-bottom.svg");
+  background-repeat: no-repeat;
+  background-position: 180% -80%;
+  z-index: -1;
+}
+
+.container::before {
+  content: "";
+  @include position();
+  background-color: $dark-cyan;
+  z-index: -1;
 }
 
 .main {
@@ -27,6 +112,12 @@ $dark-gray: hsl(0, 0%, 59%);
   border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
+}
+
+.name {
+  font-size: 1.125rem;
+  margin: 4.75rem 0 0;
+  font-weight: 700;
 }
 
 @media (max-width: 600px) {
