--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -22,7 +22,7 @@ $dark-gray: hsl(0, 0%, 59%);
 }
 
 .avatar {
-  position: absolute;
+  position: absolute !important;
   top: 9rem;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -32,17 +32,34 @@ $dark-gray: hsl(0, 0%, 59%);
 .card {
   width: 22rem;
   height: 24rem;
-  border-radius: 0.75rem;
+  border-radius: 0.75rem !important;
   display: flex;
   flex-direction: column;
   position: relative;
   text-align: center;
+  box-shadow: rgba(0, 0, 0, 0.16) 0 10px 36px 0, rgba(0, 0, 0, 0.06) 0 0 0 1px;
 }
 
-.cardUp {
-  width: 100%;
-  height: 9rem;
-  background: url("../public/bg-pattern-card.svg");
+.cardDown {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  gap: 3.2rem;
+
+  h5 {
+    padding-top: 1.3rem;
+    font-size: 1.2rem;
+    font-weight: 700;
+    margin-bottom: 0.2rem;
+    color: $very-dark-desaturated-blue;
+  }
+
+  p {
+    font-size: 0.65rem;
+    letter-spacing: 2px;
+    color: $dark-gray;
+    font-weight: 700;
+  }
 }
 
 .cardMiddle {
@@ -64,8 +81,10 @@ $dark-gray: hsl(0, 0%, 59%);
   }
 }
 
-.cardDown {
-  flex-grow: 1;
+.cardUp {
+  width: 100%;
+  height: 9rem;
+  background: url("../public/bg-pattern-card.svg");
 }
 
 .container {
@@ -121,7 +140,15 @@ $dark-gray: hsl(0, 0%, 59%);
 }
 
 @media (max-width: 600px) {
+  .card {
+    width: 100%;
+  }
+
+  .cardDown {
+    gap: 2.8rem;
+  }
+
   .container {
-    padding: 0 2rem;
+    padding: 0 1.5rem 0.5rem;
   }
 }
