--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -46,7 +46,7 @@ $dark-gray: hsl(0, 0%, 59%);
   justify-content: center;
   gap: 3.2rem;
 
-  h5 {
+  .status {
     padding-top: 1.3rem;
     font-size: 1.2rem;
     font-weight: 700;
